--- a/css/Main.css
+++ b/css/Main.css
@@ -14,18 +14,28 @@ a {
   color: #eee;
 }
 
-header {
-  padding: 5px 0px 0px 0px ;
+.header {
   background-color: #151515;
 }
 
-.header {
-  margin: 0 auto;
-  max-width: 900px;
+.footer {
+  background-color: #ccc;
+  color: #333;
+  text-align: right;
 }
 
-.navigation {
+.footer p {
+  display:inline-block;
+}
 
+.footer img{
+  float: left;
+  margin-top: 7px;
+}
+
+.content-wrap {
+  margin: 0 auto;
+  max-width: 1100px;
 }
 
 .navigation ul {
@@ -39,7 +49,7 @@ header {
 
 .navigation ul li a {
   float: left;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: normal;
   padding:7px 12px;
   transition-duration: 0.2s;
@@ -48,7 +58,7 @@ header {
 
 .navigation ul li a:hover:not(.active) {
   color: #111;
-  background-color: #ddd;
+  background-color: #a0a0a0;
 }
 
 .active  {
@@ -56,10 +66,75 @@ header {
   background-color: #efefef;
 }
 
-#right {
+.Most-Popular {
+  text-align: center;
+}
+
+.Swiper-container {
+   height: 300px;
+}
+
+.Swiper-container::after {
+  content: ' ';
+  display: table;
+  clear: both;
+}
+
+.item {
+  position: relative;
+  float:left;
+  overflow: initial;
+  max-width: 180px;
+}
+
+.item:hover .item-overlay.top {
+  top: 30%;
+  opacity: .8;
+}
+
+.item-overlay {
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  opacity: .1;
+  background: black;
+  color: #fff;
+  overflow: hidden;
+  text-align: center;
+  width:100%; 
+  transition: top 0.5s ease-in-out, opacity .6s ease-in-out;
+}
+
+.item-overlay.top {
+  top: 100%;
+}
+
+.Information label {
+  font-weight: 800;
+}
+
+.right {
   float: right;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .navigation ul li a{display: none;}
+}
+
+
+input[type=text] {
+    width: 45px;
+    border: none;
+    border-radius: 4px;
+    font-size: 12px;
+    background-color: white;
+    padding: 12px 20px;
+    transition: width 0.4s ease-in-out;
+}
+
+input[type=text]:focus {
+    width: 180px;
+}
+
+.right {
+  float: right;
 }
